upgrade swagger
